--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 
 <body>
+    header>
+    <img id="logo" src="mundo.jpg" alt="Mundo Sustentável"/>
+    <ul id="menu">
+        <li><a href="#projeto">Projeto</a></li>
+        <li><a href="#surgiu">Surgiu</a></li>
+        <li><a href="#mais">Mais</a></li>
+        <li><a href="#sobre">Sobre</a></li>
+    </ul>
+</header>
     <div id="imagem-fundo">
     <h1 id="titulo"> Redução da Desigualdade </h1>
 
