--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    header>
+    <header>
     <img id="logo" src="mundo.jpg" alt="Mundo Sustentável"/>
     <ul id="menu">
         <li><a href="#projeto">Projeto</a></li>
